kubernetes/overlays/production/canary-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-canary
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: user-bl-service-canary
spec:
  type: ClusterIP
  selector:
    app: user-bl-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: user-db-access-service-canary
spec:
  type: ClusterIP
  selector:
    app: user-db-access-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: job-bl-service-canary
spec:
  type: ClusterIP
  selector:
    app: job-bl-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: job-db-access-service-canary
spec:
  type: ClusterIP
  selector:
    app: job-db-access-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: customer-bl-service-canary
spec:
  type: ClusterIP
  selector:
    app: customer-bl-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8007
---
apiVersion: v1
kind: Service
metadata:
  name: customer-db-access-service-canary
spec:
  type: ClusterIP
  selector:
    app: customer-db-access-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: admin-bl-service-canary
spec:
  type: ClusterIP
  selector:
    app: admin-bl-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: maps-access-service-canary
spec:
  type: ClusterIP
  selector:
    app: maps-access-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8009
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service-canary
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8011
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-canary
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway-canary
spec:
  type: ClusterIP
  selector:
    app: nginx-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
